Fix regarding responsive sidebar button alignment

--- a/src/assets/scss/layout/l-site.scss
+++ b/src/assets/scss/layout/l-site.scss
@@ -49,19 +49,20 @@ $l-site__sidebar-width: $l-site-breakpoint-mobile-lg - $l-sidebar__buttongroup__
 
                 > li {
                     float: none;
+                    vertical-align: top;
                 }
 
                 @include breakpoint($l-site-breakpoint-mobile-lg) {
                     position: fixed;
                     left: $l-site__sidebar-width;
-
-                    > li {
-                        float: left;
-                    }
                 }
 
                 @include breakpoint($l-site-breakpoint-tablet) {
                     left: $l-sidebar__buttongroup-margin + $l-site__sidebar-width;
+
+                    > li {
+                        float: left;
+                    }
                 }
             }
         }
